Changes to chart to work with new Agent

--- a/pubsubplus/templates/insights-configmapMonitor.yaml
+++ b/pubsubplus/templates/insights-configmapMonitor.yaml
@@ -54,24 +54,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "solace.fullname" . }}-agentv2-0
+  name: {{ template "solace.fullname" . }}-agentv2-2
 data:
-  DD_AC_EXCLUDE: name:datadog-agent
-  DD_APM_ENABLED: 'False'
-  DD_COLLECT_KUBERNETES_EVENTS: 'True'
-  DD_DOGSTATSD_NON_LOCAL_TRAFFIC: 'true'
   DD_HOSTNAME: "{{ template "solace.fullname" . }}-selfhosted-host"
-  DD_KUBELET_TLS_VERIFY: 'False'
-  DD_KUBERNETES_POD_LABELS_AS_TAGS: '{"*":"kube_%%label%%"}'
-  DD_LEADER_ELECTION: 'True'
-  DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL: 'true'
-  DD_LOGS_CONFIG_USE_COMPRESSION: 'true'
-  DD_LOGS_CONFIG_USE_HTTP: 'true'
-  DD_LOGS_ENABLED: 'true'
-  DD_PROCESS_AGENT_ENABLED: 'False'
-  DD_PROCESS_AGENT_PROCESS_DISCOVERY_ENABLED: 'False'
   DD_SITE: {{ .Values.insights.datadogSite }}
   DD_TAGS: {{ printf "%s %s " $ddTags "ha_role:monitoring" }}
-  KUBERNETES: 'False'
+  DD_ENABLE_PAYLOADS_EVENTS: "False"
+  DD_ENABLE_PAYLOADS_SERIES: "False"
+  DD_ENABLE_PAYLOADS_SERVICE_CHECKS: "False"
+  DD_ENABLE_PAYLOADS_SKETCHES: "False"
 
   {{- end}}
