--- a/pubsubplus/templates/insights-solace-secret-config.yaml
+++ b/pubsubplus/templates/insights-solace-secret-config.yaml
@@ -50,6 +50,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "solace.fullname" . }}-monitoring-solace
+  labels:
+    app.kubernetes.io/name: {{ template "solace.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 data:
   solace.yaml: |-
     init_config:
@@ -86,7 +91,6 @@ data:
       ## @param min_collection_interval - integer - required
       ## the collection interval in minutes of a check instance
       #
-      # - min_collection_interval: 5
       - min_collection_interval: 10
       - min_collection_interval: 30
       - min_collection_interval: 60
