Cleanup Helm chart to reduce agent-specific configurations

--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -131,10 +131,6 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        - name: HA_ROLE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
         - name: TZ
           value: {{ printf "%s/%s" ":/usr/share/zoneinfo" (default "UTC" .Values.solace.timezone) }}
         - name: UMASK
@@ -237,15 +233,8 @@ spec:
         {{- end }}
         {{- if ( .Values.insights.enabled) }}
       - name: datadog-agent
-        image: us-docker.pkg.dev/capable-stream-180018/solace-datadog-agent/solace-datadog-agent:latest
+        image: {{ .Values.insights.insightsAgentImage.repository }}:{{ .Values.insights.insightsAgentImage.tag}}
         imagePullPolicy: Always
-        ports:
-          - containerPort: 8125
-            name: dogstatsdport
-            protocol: UDP
-          - containerPort: 8126
-            name: traceport
-            protocol: TCP
         resources:
           requests:
             memory: {{ .Values.insights.resources.requests.memory }}
@@ -253,17 +242,6 @@ spec:
           limits:
             memory: {{ .Values.insights.resources.limits.memory }}
             cpu: {{ .Values.insights.resources.limits.cpu }}
-        env:
-          - name: DD_KUBERNETES_KUBELET_HOST
-            valueFrom:
-              fieldRef:
-                fieldPath: status.hostIP
-          - name: DD_PROCFS_PATH
-            value: "/proc"
-          - name: HA_ROLE
-            valueFrom:
-              fieldRef:
-                fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
         envFrom:
           - configMapRef:
               name: {{ template "solace.fullname" . }}-agentv2-0
@@ -279,15 +257,8 @@ spec:
             mountPath: /jail
             subPath: jail
             readOnly: true
-          - name: monitoring-logs
-            mountPath: /etc/datadog-agent/conf.d/solace.d
           - name: monitoring-solace
             mountPath: /conf.d
-          - name: monitoring-monitoringconfig
-            mountPath: /solace.d
-          - name: datadog-ssl-monitoringconfig
-            mountPath: /etc/datadog-agent/datadog.yaml
-            subPath: datadog.yaml
 {{- end -}}
 {{- end }}
       volumes:
@@ -299,8 +270,8 @@ spec:
                   fieldPath: metadata.labels
         - name: config-map
           configMap:
-            name: {{ template "solace.fullname" . }}
             defaultMode: 0755
+            name: {{ template "solace.fullname" . }}
         - name: admin-secrets
           secret:
             secretName: {{ template "solace.fullname" . }}-secrets
@@ -311,28 +282,8 @@ spec:
             secretName: {{ template "solace.fullname" . }}-insights-secrets
             defaultMode: 0400
         - name: monitoring-solace
-          projected:
-            sources:
-              - configMap:
-                  name: {{ template "solace.fullname" . }}-monitoring-solace
-        - name: monitoring-logs
-          configMap:
-            name: {{ template "solace.fullname" . }}-monitoring-logs
-            defaultMode: 0755
-            items:
-              - key: logs.yaml
-                path: logs.yml
-        - name: monitoring-monitoringconfig
-          configMap:
-            name: {{ template "solace.fullname" . }}-monitoring-config
-            defaultMode: 0755
-            items:
-              - key: monitoringConfig.yaml
-                path: monitoringConfig.yaml
-        - name: datadog-ssl-monitoringconfig
-          configMap:
-            name: {{ template "solace.fullname" . }}-datadog-ssl-vmrconfig
-            defaultMode: 0755
+          secret:
+            secretName: {{ template "solace.fullname" . }}-monitoring-solace
 {{- end }}
 {{- if and (.Values.tls) (.Values.tls.enabled) }}
         - name: server-certs
