--- a/pubsubplus/templates/insights-configmap-monitoring.yaml
+++ b/pubsubplus/templates/insights-configmap-monitoring.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.insights.enabled }}
+{{- if and .Values.insights.enabled .Values.solace.redundancy }}
 
 {{- $tagsArray := .Values.insights.tags -}}
 {{- $ddTagsCustomerProvided := "" -}}
@@ -36,17 +36,10 @@
 {{- $environmentName := .Values.insights.environment_name -}}
 {{- $maasDatacenterId := printf "%s_%s" $orgId $environmentName -}}
 
-{{- $serviceType := "standard" -}}
-{{- if .Values.image.repository -}}
-  {{- if contains "enterprise" .Values.image.repository -}}
-    {{- $serviceType = "enterprise" -}}
-  {{- else if contains "standard" .Values.image.repository -}}
-    {{- $serviceType = "standard" -}}
-  {{- end -}}
-{{- end -}}
+{{- $serviceType := include "solace.serviceType" . -}}
 
 {{- $ddTagsCalculated := printf "infrastructure_name:%s-%s-%s maas_datacenter_id:%s service_class:%s maas_instance:%s-selfhosted-host service_type:%s" (include "solace.fullname" .) .Values.solace.size (randAlpha 4) $maasDatacenterId .Values.solace.size (include "solace.fullname" .) $serviceType -}}
-{{- $ddTagsDefault := "monitoring_mode:advanced datacenter_access_type:Private datacenter_type:CustomerManaged is_trial:false peb_type:software provider:k8s maas_id:customermanaged " -}}
+{{- $ddTagsDefault := "monitoring_mode:advanced datacenter_access_type:Private datacenter_type:CustomerManaged is_trial:false peb_type:software provider:k8s maas_id:customermanaged ha_role:monitoring" -}}
 
 {{- $ddTags := printf "%s %s %s" $ddTagsDefault $ddTagsCalculated $ddTagsCustomerProvided -}}
 
@@ -54,24 +47,13 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "solace.fullname" . }}-agentv2-0
+  name: {{ template "solace.fullname" . }}-agentv2-2
 data:
-  DD_AC_EXCLUDE: name:datadog-agent
-  DD_APM_ENABLED: 'False'
-  DD_COLLECT_KUBERNETES_EVENTS: 'True'
-  DD_DOGSTATSD_NON_LOCAL_TRAFFIC: 'true'
-  DD_HOSTNAME: "{{ template "solace.fullname" . }}-selfhosted-host"
-  DD_KUBELET_TLS_VERIFY: 'False'
-  DD_KUBERNETES_POD_LABELS_AS_TAGS: '{"*":"kube_%%label%%"}'
-  DD_LEADER_ELECTION: 'True'
-  DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL: 'true'
-  DD_LOGS_CONFIG_USE_COMPRESSION: 'true'
-  DD_LOGS_CONFIG_USE_HTTP: 'true'
-  DD_LOGS_ENABLED: 'true'
-  DD_PROCESS_AGENT_ENABLED: 'False'
-  DD_PROCESS_AGENT_PROCESS_DISCOVERY_ENABLED: 'False'
+  DD_HOSTNAME: "{{ template "solace.fullname" . }}-monitoring"
   DD_SITE: {{ .Values.insights.datadogSite }}
-  DD_TAGS: {{ printf "%s %s " $ddTags "ha_role:monitoring" }}
-  KUBERNETES: 'False'
-
-  {{- end}}
+  DD_TAGS: {{ $ddTags }}
+  DD_ENABLE_PAYLOADS_EVENTS: false
+  DD_ENABLE_PAYLOADS_SERIES: false
+  DD_ENABLE_PAYLOADS_SERVICE_CHECKS: false
+  DD_ENABLE_PAYLOADS_SKETCHES: false
+  {{- end }}
