--- a/pubsubplus/templates/insights-solace-secret-config.yaml
+++ b/pubsubplus/templates/insights-solace-secret-config.yaml
@@ -47,10 +47,10 @@ data:
   {{- end -}}
 {{- end -}}
 apiVersion: v1
-kind: ConfigMap
+kind: Secret
 metadata:
   name: {{ template "solace.fullname" . }}-monitoring-solace
-data:
+stringData:
   solace.yaml: |-
     init_config:
       ## @param host - string - required
@@ -85,8 +85,6 @@ data:
     instances:
       ## @param min_collection_interval - integer - required
       ## the collection interval in minutes of a check instance
-      #
-      # - min_collection_interval: 5
       - min_collection_interval: 10
       - min_collection_interval: 30
       - min_collection_interval: 60
