--- a/pubsubplus/templates/service.yaml
+++ b/pubsubplus/templates/service.yaml
@@ -14,6 +14,9 @@ metadata:
 {{- end }}
 spec:
   type: {{.Values.service.type | default "LoadBalancer"}}
+  {{- if .Values.insights.enabled }}
+  publishNotReadyAddresses: true
+  {{- end }}
   ports:
   {{- range $item := .Values.service.ports }}
   - port: {{ $item.servicePort }}
