Update insights CM template

--- a/pubsubplus/templates/insights-configmap-agent.yaml
+++ b/pubsubplus/templates/insights-configmap-agent.yaml
@@ -44,7 +44,7 @@
 {{- if not $serviceId -}}
   {{- $serviceId = (randAlpha 6) -}}
 {{- end -}}
-{{- if $serviceName -}}
+{{- if not $serviceName -}}
   {{- $serviceName = printf "service_%s" $serviceId -}}
 {{- end -}}
 
