--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -111,7 +111,7 @@ spec:
           initialDelaySeconds: 300
           timeoutSeconds: 5
         readinessProbe:
-          initialDelaySeconds: 30
+          initialDelaySeconds: 120
           periodSeconds: 5
           exec:
             command:
@@ -234,7 +234,7 @@ spec:
         {{- end }}
         {{- if ( .Values.insights.enabled) }}
       - name: insights-agent
-        image: {{ .Values.insights.insightsAgentImage.repository }}:{{ .Values.insights.insightsAgentImage.tag }}
+        image: {{ .Values.insights.image.repository }}:{{ .Values.insights.image.tag }}
         imagePullPolicy: Always
         resources:
           requests:
@@ -244,19 +244,17 @@ spec:
             memory: {{ .Values.insights.resources.limits.memory }}
             cpu: {{ .Values.insights.resources.limits.cpu }}
         env:
-        - name: DD_HOSTNAME
+        - name: INSIGHTS_AGENT_BROKER_HOSTNAME_OVERRIDE
           valueFrom:
             fieldRef:
-              fieldPath: metadata.name
-        - name: QUICKSTART_HELM_HA_ROLE_INDEX
+              fieldPath: spec.nodeName
+        - name: INSIGHTS_AGENT_NODE_ROLE
           valueFrom:
             fieldRef:
               fieldPath: metadata.labels['apps.kubernetes.io/pod-index']
         envFrom:
-          - configMapRef:
-              name: {{ template "solace.fullname" . }}-monitoring-insights-env-configs
           - secretRef:
-              name: {{ template "solace.fullname" . }}-monitoring-insights-env-secrets
+              name: {{ template "solace.fullname" . }}-insights-agent-env-secrets
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
@@ -267,8 +265,9 @@ spec:
             mountPath: /jail
             subPath: jail
             readOnly: true
-          - name: monitoring-solace
-            mountPath: /conf.d
+          - name: data
+            mountPath: /opt/datadog-agent/run
+            subPath: opt/datadog-agent/run
 {{- end -}}
 {{- end }}
       volumes:
@@ -291,9 +290,6 @@ spec:
           secret:
             secretName: {{ template "solace.fullname" . }}-insights-secrets
             defaultMode: 0400
-        - name: monitoring-solace
-          secret:
-            secretName: {{ template "solace.fullname" . }}-monitoring-solace
 {{- end }}
 {{- if and (.Values.tls) (.Values.tls.enabled) }}
         - name: server-certs
