Add comments to default Insights values; add validation for required environment variables for Insights installation

--- a/pubsubplus/templates/insights-agent-secret.yaml
+++ b/pubsubplus/templates/insights-agent-secret.yaml
@@ -27,7 +27,16 @@ http
 
 {{- if .Values.insights.enabled }}
 {{- if not .Values.insights.environmentVariables }}
-{{- fail "insights.environmentVariables must be defined when insights is enabled" }}
+{{- fail "insights.environmentVariables must be defined when Insights is enabled" }}
+{{- end }}
+{{- if not .Values.insights.environmentVariables.INSIGHTS_AGENT_API_KEY }}
+{{- fail "insights.environmentVariables.INSIGHTS_AGENT_API_KEY must be defined when Insights is enabled" }}
+{{- end }}
+{{- if not .Values.insights.environmentVariables.INSIGHTS_AGENT_SITE }}
+{{- fail "insights.environmentVariables.INSIGHTS_AGENT_SITE must be defined when Insights is enabled" }}
+{{- end }}
+{{- if not .Values.insights.environmentVariables.INSIGHTS_AGENT_TAGS }}
+{{- fail "insights.environmentVariables.INSIGHTS_AGENT_TAGS must be defined when Insights is enabled" }}
 {{- end }}
 
 {{- $insightsPasswordValue := include "insightsAgent.password" . -}}
