Use known default container ports for SEMP connectivity

--- a/pubsubplus/templates/insights-agent-secret.yaml
+++ b/pubsubplus/templates/insights-agent-secret.yaml
@@ -1,9 +1,8 @@
 {{- define "insightsAgent.sempPort" -}}
-{{- $portName := ternary "tls-semp" "tcp-semp" .Values.tls.enabled -}}
-{{- range .Values.service.ports -}}
-  {{- if eq .name $portName -}}
-    {{- .containerPort -}}
-  {{- end -}}
+{{- if .Values.tls.enabled -}}
+1943
+{{- else -}}
+8080
 {{- end -}}
 {{- end -}}
 
