--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -115,6 +115,9 @@ securityContext:
   # runAsUser: expecting a number
   runAsUser: 1000001
 
+# enableServiceLinks indicates whether information about services should be injected into pod's environment variables, matching the syntax of Docker links. Optional: Defaults to false.
+enableServiceLinks: false
+
 serviceAccount:
   # create=true will create a service account to be used for the deployment
   create: true
@@ -244,3 +247,35 @@ storage:
   #  if undefined or set to false, the legacy behavior is to individually mount storage-elements in subdirectories.
   #  Note: legacy mount still works for broker version 9.12 and later but may be deprecated in the future.
   # useStorageGroup: true
+
+insights:
+  # If set to true, this will enable the collection of metrics and logs for the Solace broker
+  enabled: false
+
+  environmentVariables:
+    # API key for your Solace Insights subscription, available from the Solace Cloud Console. This value is required.
+    INSIGHTS_AGENT_API_KEY: ""
+    # Site location where broker metrics and logs will flow, available from the Solace Cloud Console. This value is required.
+    INSIGHTS_AGENT_SITE: ""
+    # Tags for metrics and logs, available from the Solace Cloud Console. This value is required.
+    INSIGHTS_AGENT_TAGS: ""
+
+  image:
+    # Image repository for the Insights Agent container
+    repository: gcr.io/gcp-maas-prod/solace-insights-agent
+    # Image tag for the Insights Agent container
+    tag: latest
+    # Image pull secret name for the Insights Agent container. The pull secret is available from the Solace Cloud Console.
+    pullSecretName: gcr-reg-secret
+
+  resources:
+    requests:
+      # Minimum CPU resource required by the insights-agent container
+      cpu: 200m
+      # Minimum memory resource required by the insights-agent container
+      memory: 256Mi
+    limits:
+      # Maximum CPU resource the insights-agent container can use
+      cpu: 200m
+      # Maximum memory resource the insights-agent container can use
+      memory: 512Mi
