--- a/pubsubplus/templates/solaceConfigMap.yaml
+++ b/pubsubplus/templates/solaceConfigMap.yaml
@@ -489,14 +489,40 @@ data:
             rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
           fi
         fi
-        cluster_status=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
-                -q "<rpc><show><cluster><cluster-name-pattern>*</cluster-name-pattern></cluster></show></rpc>" \
-                -v "/rpc-reply/rpc/show/cluster/clusters/cluster/oper-up[text()]"`
-        cluster_status=`echo ${cluster_status} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
-        if [ "${cluster_status}" != "true" ] && [ "${cluster_status}" != "" ]; then
-          echo "`date` INFO: ${APP}-Checking DMR cluster status. DMR cluster is down"
-          rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
+        broker_version=$(/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
+          -q "<rpc><show><version/></show></rpc>" \
+          -v "/rpc-reply/rpc/show/version/current-load[text()]")
+        broker_version=`echo ${broker_version} | xmllint -xpath "string(returnInfo/valueSearchResult)" - | cut -d'.' -f2`
+        if [[ "${broker_version}" -ge 8 ]]; then
+          # DMR cluster operation state
+          cluster_status=$(/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
+                  -q "<rpc><show><cluster><cluster-name-pattern>*</cluster-name-pattern></cluster></show></rpc>" \
+                  -v "/rpc-reply/rpc/show/cluster/clusters/cluster/oper-up[text()]")
+          cluster_status=`echo ${cluster_status} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
+          if [ "${cluster_status}" != "true" ] && [ "${cluster_status}" != "" ]; then
+            echo "$(date) INFO: ${APP}-DMR cluster operational state is down"
+            rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
+          fi
         fi
+        if [[ "${broker_version}" -ge 11 ]]; then
+          # DMR sync state
+          cluster_sync_status=$(/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
+                -q "<rpc><show><cluster><cluster-name-pattern>*</cluster-name-pattern></cluster></show></rpc>" \
+                -v "/rpc-reply/rpc/show/cluster/clusters/cluster/sync-complete[text()]")
+          cluster_sync_status=`echo ${cluster_sync_status} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
+          if [ "${cluster_sync_status}" != "true" ] && [ "${cluster_sync_status}" != "" ]; then
+            echo "$(date) INFO: ${APP}-DMR cluster is not in-sync"
+            rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
+          fi
+        fi
+        # cluster_status=`/mnt/disks/solace/semp_query.sh -n admin -p ${password} -u http://localhost:8080 \
+        #         -q "<rpc><show><cluster><cluster-name-pattern>*</cluster-name-pattern></cluster></show></rpc>" \
+        #         -v "/rpc-reply/rpc/show/cluster/clusters/cluster/oper-up[text()]"`
+        # cluster_status=`echo ${cluster_status} | xmllint -xpath "string(returnInfo/valueSearchResult)" -`
+        # if [ "${cluster_status}" != "true" ] && [ "${cluster_status}" != "" ]; then
+        #   echo "`date` INFO: ${APP}-Checking DMR cluster status. DMR cluster is down"
+        #   rm -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE}; exit 1
+        # fi
         # Pass readiness check
         if [ ! -f ${FINAL_ACTIVITY_LOGGED_TRACKING_FILE} ]; then
           echo "`date` INFO: ${APP}-Redundancy is up and node is Mate Active"
