--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -222,13 +222,15 @@ jobs:
         # Test basic connectivity
         curl -s -u admin:admin http://$url:8080/SEMP -d "<rpc><show><version></version></show></rpc>"
 
+        # Test Sytem configuration
+        curl -s -u admin:admin http://$url:8080/SEMP -d "<rpc><show><system></system></show></rpc>"
+
         # Check Kafka Bridge Count through SEMP
         echo "Checking max Kafka Bridge Count through SEMP..."
-        if ! curl -s -u admin:admin http://$url:59487/SEMP -d "<rpc><show><system></system></show></rpc>" | grep -q "<max-kafka-bridges>10</max-kafka-bridges>"; then
+        if ! curl -s -u admin:admin "http://$url:8080/SEMP" -d "<rpc><show><system></system></show></rpc>" | grep -q "<max-kafka-bridges>10</max-kafka-bridges>"; then
           echo "Expected value not found!"
           exit 1
         fi
-
 
         # Check max bridge Count through SEMP
         echo "Checking max Bridge Count through SEMP..."
