--- a/pubsubplus/templates/solaceStatefulSet.yaml
+++ b/pubsubplus/templates/solaceStatefulSet.yaml
@@ -116,7 +116,7 @@ spec:
         securityContext:
           privileged: false
 {{- if semverCompare "<9.4" (default "9.4" (regexFind "\\d+\\.\\d+" .Values.image.tag)) }}
-          # need capabilities opened up if PubSub+ version is lower than 9.4
+          # need capabilities opened up if Solace Event Broker version is lower than 9.4
           capabilities:
             add:
               - IPC_LOCK
