--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -35,6 +35,16 @@ solace:
   #   cpu: 2
   #   # memory: host Virtual Memory
   #   memory: 3410Mi
+  #   # maxKafkaBridgeCount: Maximum number of Kafka bridges
+  #   maxKafkaBridgeCount: 0
+  #   # maxKafkaBrokerConnectionCount: Maximum number of connections to Kafka brokers
+  #   maxKafkaBrokerConnectionCount: 0
+  #   # maxBridgeCount: Maximum number of bridges
+  #   maxBridgeCount: 25
+  #   # maxSubscriptionCount: Maximum number of subscriptions
+  #   maxSubscriptionCount: 50000
+  #   # maxGuaranteedMessageSize: Maximum guaranteed message size in MB
+  #   maxGuaranteedMessageSize: 10
 
   # solace.podModifierEnabled=true enables modifying (reducing) CPU and memory resources for Monitoring nodes in an HA deployment
   # this must be provided and set to true to enable adjustments by the solace-pod-modifier admission plugin
@@ -52,10 +62,10 @@ solace:
   #   kubectl get secret <release-name>-solace-secrets -o jsonpath="{.data.username_admin_password}" | base64 --decode
   usernameAdminPassword:
 
-  # solace.timezone setting for the PubSub+ container, if undefined default is UTC. Valid values are tz database time zone names.
+  # solace.timezone setting for the Solace Event Broker container, if undefined default is UTC. Valid values are tz database time zone names.
   # timezone: UTC
 
-  # solace.extraEnvVars can be used to add extra environment variables to the PubSub+ container
+  # solace.extraEnvVars can be used to add extra environment variables to the Solace Event Broker container
   # Important: env variables defined here will not override the ones defined in solaceConfigMap
   # A primary use case is to specify configuration keys (Note that configuration keys are only evaluated upon initial startup)
   #  refer to: https://docs.solace.com/Configuring-and-Managing/SW-Broker-Specific-Config/Docker-Tasks/Config-SW-Broker-Container-Cfg-Keys.htm
@@ -146,7 +156,7 @@ service:
   #  networking.gke.io/load-balancer-type: "internal"
 
   # List here all ports to be exposed as external service.
-  #    "containerPorts" (from the PubSub+ container) will be exposed as external "servicePorts",
+  #    "containerPorts" (from the Solace Event Broker container) will be exposed as external "servicePorts",
   # Refer to the Solace documentation of Default Port Numbers for the containerPorts.
   ports:
       - servicePort: 2222
@@ -225,7 +235,7 @@ storage:
 
   # storage.customVolumeMount enables specifying a YAML fragment how the data volume should be mounted.
   #   If customVolumeMount is defined the rest of the storage params will be ignored
-  #   This example shows how to mount the PubSub+ data volume from an existing pvc "test-claim". Ensure to preserve indentation.
+  #   This example shows how to mount the Solace Event Broker data volume from an existing pvc "test-claim". Ensure to preserve indentation.
   # customVolumeMount: |
   #   persistentVolumeClaim:
   #     claimName: existing-pvc-name
@@ -243,7 +253,7 @@ storage:
   # storage.monitorStorageSize: if provided this will create and assign the minimum recommended storage to Monitor pods. For initial deployments only.
   monitorStorageSize: 1500M
 
-  #storage.useStorageGroup: use a single mount point storage-group, as recommended from PubSub+ version 9.12
+  #storage.useStorageGroup: use a single mount point storage-group, as recommended from Solace Event Broker version 9.12
   #  if undefined or set to false, the legacy behavior is to individually mount storage-elements in subdirectories.
   #  Note: legacy mount still works for broker version 9.12 and later but may be deprecated in the future.
   # useStorageGroup: true
